# ChangeLog for media-video/gxine
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/gxine/ChangeLog,v 1.117 2012/01/28 04:41:15 ssuominen Exp $

  28 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -gxine-0.5.905-r1.ebuild,
  -files/gxine-0.5.905-spidermonkey-update.patch, -gxine-0.5.906.ebuild:
  old

  28 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> gxine-0.5.906-r1.ebuild:
  ppc/ppc64 stable wrt #396521

  15 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gxine-0.5.906-r1.ebuild:
  x86 stable wrt bug #396521

  31 Dec 2011; Agostino Sarubbo <ago@gentoo.org> gxine-0.5.906-r1.ebuild:
  Stable for AMD64, wrt bug #396521

*gxine-0.5.906-r1 (25 Nov 2011)

  25 Nov 2011; Samuli Suominen <ssuominen@gentoo.org> +gxine-0.5.906-r1.ebuild,
  +files/gxine-0.5.906-playlist_segfault.patch:
  Fix segmentation fault in playlist wrt #390783 by Rafał Mużyło

  10 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> gxine-0.5.906.ebuild:
  Release to ~arch for testing. This one works with mozjs185 wrt #360971 by
  Sebastian Luther and Ian Stakenvicius.

*gxine-0.5.906 (04 Oct 2011)

  04 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> +gxine-0.5.906.ebuild,
  +files/gxine-0.5.906-endif.patch:
  Version bump.

  22 Jun 2011; Nirbheek Chauhan <nirbheek@gentoo.org> gxine-0.5.905-r1.ebuild:
  Fix spidermonkey version for the new versioning scheme

  10 Jun 2011; Samuli Suominen <ssuominen@gentoo.org> gxine-0.5.905-r1.ebuild:
  Fix sys-fs/udev USE depend wrt #370383 by William Hubbs.

  10 Apr 2011; Thomas Kahle <tomka@gentoo.org> gxine-0.5.905-r1.ebuild:
  x86 stable per bugs 357655, 361003

  31 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> gxine-0.5.905-r1.ebuild:
  ppc/ppc64 stable wrt #361003

  29 Mar 2011; Christoph Mende <angelos@gentoo.org> gxine-0.5.905-r1.ebuild:
  Stable on amd64 wrt bug #361003

  10 Jan 2011; Samuli Suominen <ssuominen@gentoo.org> gxine-0.5.905-r1.ebuild: