@@ -6,17 +6,19 @@ AUX gxine-0.5.905-fix-nspr-useage.patch 433 RMD160 65af0ddee220ca456acf20eea521f
 AUX gxine-0.5.906-endif.patch 349 RMD160 0683bb409616d8ef878e4144e747bd0032fc236f SHA1 0c48cf0457f21dea9bdc70bed62421cd6bbdebfb SHA256 d3d14fdffe9f8e1872bcbf28670d48b72ed76d7a882902bb298902bb8ca4b6fa
 AUX gxine-0.5.906-playlist_segfault.patch 784 RMD160 722c43658e6a74005d941a70db5ce8a0e7cca6a6 SHA1 109819cb076a9ea53f3a5adffb0415b5ee3005fa SHA256 b1fe13c17b71f871a82c7dcc58bc70270e6d3157506f91554a19b721b1591f7d
 DIST gxine-0.5.906.tar.xz 906964 RMD160 6c131bc266acf50bea6f240b3c93ee0fa8692426 SHA1 88495a76f5d7e885d8c75ef145667f21e9a55ede SHA256 7cab1f17cedddef947d32cdc94aa276d20f741db356b08e5efdbf954e9ceaf14
+DIST gxine-0.5.907.tar.xz 910528 RMD160 35be9f7737c1b45787a46dd61916c81c33bea15e SHA1 1b49b5b6a800611db032e4b7fd36af97a731a167 SHA256 b5c925806a35cb23a24a80a39d494cefb529e22c957987741f269a994ab258d5
 EBUILD gxine-0.5.906-r1.ebuild 2500 RMD160 3895697be41cc0ef442b47e3a5c0a101299973bd SHA1 345a411fb2c8c160036bdb391f32e14e667b765c SHA256 d52c3d02933c62e24a64fa5e26c303e5f16ecb8e3255d52f55b0747751c20919
-MISC ChangeLog 16808 RMD160 4611070c00f6b68e393cfb4bf8470bbbf62ea3df SHA1 ed92f3ef3d3c6b93ee7ec8bf845a2b8800c3e94e SHA256 18959882669c78011822194c8851825dd7a424cfefcfff14ebd0cfdbb51d41b4
-MISC metadata.xml 233 RMD160 e62d18211d353ab6d54c1bdabe20fad0705dfa37 SHA1 25063adc119eb9992ced7996faa60e0cb45ad60f SHA256 2e54b419554b54671e04a167f2fa56d52d8f0b509157ba98695c01d860b3196a
+EBUILD gxine-0.5.907.ebuild 2639 RMD160 648529d0e9bd01f152900a7ef89a242b8e4f2f4e SHA1 f16209c5b5163de165120a985d44a626dd782fb1 SHA256 0c32f9e33047ed159d5983a8e77edd12c4d98d721fb4808a645e48e43171f455
+MISC ChangeLog 16976 RMD160 67fbd7746822b06f307681b6e25aa109c28f1735 SHA1 210df2e6514f6516c36d4ef8722d11a593a67057 SHA256 518482dd3b933f844caf7100ad58d5ebdac59a4c25faa130a00367ca21c9ac39
+MISC metadata.xml 373 RMD160 879bbceb1af5297cc90a6191f9a40375a4732c81 SHA1 9e40c5d9bb710cc676c38c9a097af598db072e60 SHA256 202b197a4f7feb227636e8de2bc00c6af351fd80f72a7916df100aeadd056bd9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPI3vnAAoJEEdUh39IaPFNqyUH/1WdQRZ0Ya/MJVCXdQ95NBtA
-J1HXQ4w6V2laXrJPtXQrLwTNMJdiNDeAsRMHHahepR8Bx5n01MmDlkg+vOfyd9bf
-CRIDwO26wD1fkpDRpIfOMgq+Y+89v8CLeECBHQFVZ3Lo1cFWieJg6ziYnAmbVyZP
-/LZezz75CbznnDWaEigKS/Xz+eGIMAC8UyrJSzZepRubA5M1vvFu3lg/EE1VD2sV
-nsUhDNg9BWByx/nM13HFuLNipI+Nnrxq2EpzS5gcKvdUqJupcnUFmZuNxBuR08EP
-Xr4SF4rs2GXw8CabBQPErHLxH/zZ0RCdhH5KFja2UpFgkPBp6gcOmU73scHNRHQ=
-=cDiP
+iQEcBAEBAgAGBQJPSA6yAAoJEEdUh39IaPFNZ7IIAJPYkb5Jubz8D+Y2LDUKhJBn
+ZyXZT+ZkK0SUHpKjI1vpPzZxklF+gnB7ybov3uC62xQVAldCbgBd+6vtqoJXcXk4
+lEYjnYHZaiw2Xj9VtXMxfEbQ6tQBCJh9JMC2o6M62UmJ2qzebjJ2gwMndGkVo6LG
+0AFYrnae3BHNspuBHSuXks487sQhcm/cKGFauUYpA6ItivJMlXjrbNdcc6dXlsRS
+6g+2LBOFim0GijnL5p70iQNlix1l08/Vmst3CFH+BJcJ5LF45UukIG0viMP1xmYw
++D8db4tYs0nUHhEd+wcepqXzh1DMvm0sIsySlsCfj0E1ZoFT+oOLi3alXzekRdc=
+=EJhy
 -----END PGP SIGNATURE-----
