@@ -5,4 +5,7 @@
   <maintainer>
     <email>media-video@gentoo.org</email>
   </maintainer>
+  <use>
+    <flag name='gnome-screensaver'>Enable dbus support to communicate with <pkg>gnome-extra/gnome-screensaver</pkg></flag>
+  </use>
 </pkgmetadata>
