@@ -1,6 +1,12 @@
 # ChangeLog for media-video/gxine
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/gxine/ChangeLog,v 1.117 2012/01/28 04:41:15 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/gxine/ChangeLog,v 1.118 2012/02/24 22:27:11 ssuominen Exp $
+
+*gxine-0.5.907 (24 Feb 2012)
+
+  24 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> +gxine-0.5.907.ebuild,
+  metadata.xml:
+  Version bump wrt #405651 by "teidakankan"
 
   28 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -gxine-0.5.905-r1.ebuild,
   -files/gxine-0.5.905-spidermonkey-update.patch, -gxine-0.5.906.ebuild:
